JBTM-1263 Port all xts crash recovery fixes from narayana 5.x branch
git-svn-id: https://anonsvn.jboss.org/repos/labs/labs/jbosstm/branches/JBOSSTS_4_16@38188 c60d74c8-e8f6-0310-9e8f-d4a2fc68ab70